//
//  AccessibilityIDs.swift
//  AlbumFinder
//
//  Created by Xinghou Liu on 03/03/2019.
//  Copyright © 2019 Xing Liu. All rights reserved.
//

import Foundation

public enum AccessibilityIDs {
    public static let mainSearhBar = "main.searchBar"
    public static let mainTableView = "main.tableView"
    public static let mainTableViewCell = "main.tableView.cell"
    
    public static let detailsImage = "details.image"
    public static let detailsName = "details.name"
    public static let detailsButton = "details.button"
    
    public static let spinner = "spinner"
    public static let spinnerMask = "spinnerMask"
}
